// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Schema/>  > 'Object' 1`] = `
"export function object(data: NonNullable<Partial<Object>> = {}): NonNullable<Object> {
  
  return {
      ...{"firstName": faker.string.alpha(),"age": faker.number.float(),"address": Object.assign({}, faker.string.alpha(), faker.number.float())},
      ...data
    }
}"
`;

exports[`<Schema/>  > 'Order' 1`] = `
"export function order(data: NonNullable<Partial<Order>> = {}): NonNullable<Order> {
  
  return {
      ...{"status": faker.helpers.arrayElement<any>(["Placed", "Approved"])},
      ...data
    }
}"
`;

exports[`<Schema/>  > 'PageSizeInteger' 1`] = `
"export function pageSizeInteger(): NonNullable<PageSizeInteger> {
  
  return faker.number.int()
}"
`;

exports[`<Schema/>  > 'PageSizeNumber' 1`] = `
"export function pageSizeNumber(): NonNullable<PageSizeNumber> {
  
  return faker.number.float()
}"
`;

exports[`<Schema/>  > 'Record' 1`] = `
"export function record(data: NonNullable<Partial<Record>> = {}): NonNullable<Record> {
  
  return {
      ...{},
      ...data
    }
}"
`;

exports[`<Schema/>  > 'Upload' 1`] = `
"export function upload(): NonNullable<Upload> {
  
  return faker.image.imageUrl() as unknown as Blob
}"
`;
